# sift

./: .gitignore  .swift-format  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  Package.resolved  Package.swift  README.md  Sift.entitlements  TODO.md  forge.sh  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
Sources/SiftCLI/: Sift.swift  SiftSubcommand.swift  VaultPrompt.swift
Sources/SiftCore/: AISlug.swift  ActiveLead.swift  AlephClient.swift  Backend.swift  Deadline.swift  EventStream.swift  FindingsStore.swift  ForgeProxy.swift  Ftm.swift  Keychain.swift  LlamaServer.swift  Log.swift  Paths.swift  PiRunner.swift  Render.swift  Report.swift  RotatingLog.swift  RunState.swift  Schemas.swift  SecretsStore.swift  SeeEntity.swift  ServerPresets.swift  Session.swift  SessionName.swift  SiftCore.swift  SiftError.swift  Store.swift  Subprocess.swift  SystemPrompt.swift  TouchID.swift  VaultService.swift  Worklist.swift
Sources/SiftMenuBar/: InvestigateSubjectIntent.swift  Notifier.swift  PopoverView.swift  RunStateModel.swift  SiftMenuBarApp.swift  main.swift
Tests/SiftCoreTests/: AISlugTests.swift  ActiveLeadTests.swift  AlephClientRetryTests.swift  AlephClientTests.swift  BackendConfigTests.swift  CommandsAlephTests.swift  CommandsLocalTests.swift  DeadlineTests.swift  EntityCommandTests.swift  EventStreamTests.swift  FindingsStoreTests.swift  ForgeProxyTests.swift  FtmTests.swift  LogSayTests.swift  MarathonTests.swift  MiscTests.swift  PiRunnerResolveTests.swift  RenderTests.swift  ReportTests.swift  (+10 more)
share/: AGENTS.md  SKILL.md
(+65 files in other folders)
