[project]
name = "sift"
version = "0.2.0"
description = "Investigative research agent for OCCRP Aleph or OpenAleph"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Louis Goddard", email = "louis@datadesk.eco" }]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
]

[project.scripts]
sift = "sift.cli:main"

[project.urls]
Homepage = "https://github.com/data-desk-eco/sift"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sift"]
